K8s/openshift/frontend/Depoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colab-frontend
  namespace: teklu-soft-dev
  labels:
    app: colab-frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colab-frontend # only manage this pods 
  template:
    metadata:
      labels:
        app: colab-frontend # this is the pod labels that let's us to connect to services 
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1011790000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: colab-frontend-app
          image: tekluman/colab-frontend:v1.0.9
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: "1000m"
              memory: "768Mi"
            requests:
              cpu: "500m"
              memory: "384Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 6
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop: ["ALL"]
