K8s/openshift/frontend/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: teklu-soft-dev
  labels:
    identifer: service-label
  annotations:
    identifyname: service-annotation
spec:
  type: ClusterIP
  selector:
    app: colab-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
